# fuzzy-feature-foundry

./: LICENSE  README.md  fuzzy_features.py  setup.cfg  tests.py
fuzzy_feature_foundry/: fuzzy_features.py  test_basic.py  test_real_data.py  tests.py
