[metadata]
name = fuzzy_feature_foundry
version = 0.0.1
author = Patrick Normile
author_email = patnormil@gmail.com
description = Tools for fuzzy matching
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License ::OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
[options]
packages = find:
install_requires = 
    scikit-learn>=0.23.0
    numpy>=1.17.3
    pandas>=1.2.0
python_requires = >=3.9
